@@ -3,8 +3,8 @@ Type: Package
 Title: Function for Converting Cardinal to Ordinal Numbers by Adding a
         Language Specific Ordinal Indicator to the Number
 Description: Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator (http://en.wikipedia.org/wiki/Ordinal_indicator) to the number. 
-Version: 0.0-4
-Date: 2015-7-23
+Version: 0.0-6
+Date: 2016-3-7
 Authors@R: c(person(given=c("Damian", "W."), family="Betebenner", email="dbetebenner@nciea.org", role=c("aut", "cre")),
                 person(given="Andrew", family="Martin", role="ctb"),
 		person(given="Jeff", family="Erickson", role="ctb"))
@@ -17,9 +17,9 @@ LazyLoad: Yes
 ByteCompile: TRUE
 License: GPL-3
 NeedsCompilation: no
-Packaged: 2015-07-23 17:28:51 UTC; damian
+Packaged: 2016-03-06 10:47:26 UTC; damian
 Author: Damian W. Betebenner [aut, cre],
   Andrew Martin [ctb],
   Jeff Erickson [ctb]
 Repository: CRAN
-Date/Publication: 2015-07-24 06:47:42
+Date/Publication: 2016-03-06 23:44:25
