@@ -1,11 +1,11 @@
-eaf1da170a7e9b1d09cdce07f1fc7c5b *DESCRIPTION
+ec5d0fdec06b7b36197c9e22e758d48c *DESCRIPTION
 14e728582f16376bda51d87fd8df6f6d *NAMESPACE
-cb86e83131ab3ce73a5bb261b95f8853 *R/toOrdinal.R
+8d010ffdd1f6bbca4e85fe1c0f602e4e *R/toOrdinal.R
 7ad7e1e1e3e80e9b64b88a856349b63b *R/zzz.R
-64dda09070dc67d354e24bf794b0ab09 *inst/CITATION
-518721c8dd949b409b5284f6e5d85639 *inst/NEWS
-e2a623f481e1a465944b49e02b98ca62 *man/toOrdinal-package.Rd
+da2c257818833af0847865a4fd017df9 *inst/CITATION
+862d3df3c3a4bed8b6d2d9721fc70083 *inst/NEWS
+c95da0dce8bffa8c33c9842475aaebe9 *man/toOrdinal-package.Rd
 2d3c34f7bfb5fb33ce13c613d4ac738e *man/toOrdinal.Rd
 bbbea33d8ee6cb6cc86e964992e234a3 *tests/testthat.R
-71d78d92fc9ac609731d5f7434918077 *tests/testthat/test_toOrdinal_english.R
-1680f2a91bbc433561171230881f1da0 *tests/testthat/test_toOrdinal_swedish.R
+4c05cd7b09cff3da8df4253898c473b6 *tests/testthat/test_toOrdinal_english.R
+782efcc15728f76cd35efef4b2e3d036 *tests/testthat/test_toOrdinal_swedish.R
