@@ -3,12 +3,12 @@ citHeader("To cite package 'toOrdinal' in publications use:")
 citEntry(entry = "Manual",
          title        = "{toOrdinal}: Function for Converting Cardinal to Ordinal Numbers by Adding a Language Specific Ordinal Indicator to the Number",
          author       = "Damian W. Betebenner",
-         year         = "2015",
-         note         = "R package version 0.0-4",
+         year         = "2016",
+         note         = "R package version 0.0-6",
          url          = "https://github.com/CenterForAssessment/toOrdinal",
          
-         textVersion  = paste("Damian W. Betebenner (2015).",
+         textVersion  = paste("Damian W. Betebenner (2016).",
                         "toOrdinal: Function for Converting Cardinal to Ordinal Numbers by Adding a Language Specific Ordinal Indicator to the Number",
-                        "(R package version 0.0-4.",
+                        "(R package version 0.0-6.",
                         "URL https://github.com/CenterForAssessment/toOrdinal")
 )
